# leaknet

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  service.py  setup.py  todo.md
data/processed/leak/: data-10m-0-aug-0.csv  data-10m-0-aug-1.csv  data-10m-0-aug-2.csv  data-10m-0-aug-3.csv  data-10m-0-aug-4.csv  data-10m-0.csv  data-10m-1-aug-0.csv  data-10m-1-aug-1.csv  data-10m-1-aug-2.csv  data-10m-1-aug-3.csv  data-10m-1-aug-4.csv  data-10m-1.csv  data-40m-2-aug-0.csv  data-40m-2-aug-1.csv  data-40m-2-aug-2.csv  data-40m-2-aug-3.csv  data-40m-2-aug-4.csv  data-40m-2.csv  data-40m-3-aug-0.csv  data-40m-3-aug-1.csv  data-40m-3-aug-2.csv  data-40m-3-aug-3.csv  data-40m-3-aug-4.csv  data-40m-3.csv  data-40m-after-open-aug-0.csv  data-40m.csv  (+22 more)
deployment/: Dockerfile  leaknet.pt  service.py
models/: RNNClassifier.pth  leaknet.pt
models/checkpoints/: CNNRNNClassifier.pth  RNNClassfier.pth  RNNClassifier.pth
notebooks/: data_augmentation.ipynb  data_exploration.ipynb  data_preprocessing.ipynb  data_preprocessing_and_augmentation.ipynb  model_comparison.ipynb  model_training.ipynb  model_training_and_evaluation.ipynb  studies.db
src/: config.py  metrics.py  module.py  train.py  trainer.py  utils.py
src/data/: augment.py  data_loaders.py  dataset.py  transform.py  visualize.py
src/leaknet/: __init__.py  config.py  dataset.py  feature_extractor.py  model.py  pooling.py  utils.py  visualize.py
src/models/: __init__.py  autoencoders.py  classifiers.py  ensembles.py  feature_extractor.py  leaknet_model.py  leaknet_rae.py  model.py  pooling.py
(+43 files in other folders)
