[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leaknet"
version = "0.1.0"
authors = [{ name = "Nikas Belogolov", email = "belogolovnikas@gmail.com" }]
dependencies = [
    "torch>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
