[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leaknet"
version = "0.1.0"
authors = [{ name = "Nikas Belogolov", email = "belogolovnikas@gmail.com" }]
dependencies = [
    "ipykernel>=7.1.0",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "tsaug>=0.2.1",
    "tsgm>=0.0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
